--- a/index.html
+++ b/index.html
@@ -159,10 +159,11 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
                 <div id="MenuBtn-HOME" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">001</span> HOME</div>
                 <div id="MenuBtn-ABOUT" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">002</span> Kompaniya Haqida</div>
             <a href="./katalog/quruq/index.html" style="text-decoration: none;" class="MenuBtn"><div id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">003</span> Tovarlar</div></a>
-                <div id="MenuBtn-CERTIFICATE" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">004</span> Hujjatlar</div>
-                <div id="MenuBtn-TECHNOLOGY" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">005</span> Hamkorlar</div>
-                <div id="MenuBtn-EVENTS" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">006</span> Yangiliklar</div>
-                <a href="./contact/contact.html" style="text-decoration: none;" id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">007</span> Biz Bilan Aloqa</a>
+            <a href="./katalog/quruq/xom.html" style="text-decoration: none;" class="MenuBtn"><div id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">004</span>Xomashyo savdosi</div></a>
+                <div id="MenuBtn-CERTIFICATE" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">005</span> Hujjatlar</div>
+                <div id="MenuBtn-TECHNOLOGY" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">006</span> Hamkorlar</div>
+                <div id="MenuBtn-EVENTS" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">007</span> Yangiliklar</div>
+                <a href="./contact/contact.html" style="text-decoration: none;" id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">008</span> Biz Bilan Aloqa</a>
             </div>
 
 
