--- a/rus.html
+++ b/rus.html
@@ -148,10 +148,11 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
                 <div id="MenuBtn-HOME" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">001</span> Главный</div>
                 <div id="MenuBtn-ABOUT" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">002</span> О компании</div>
              <a href="./katalog/quruq/index.html" style="text-decoration: none;" class="MenuBtn"><div id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">003</span> Товары</div></a>
-                <div id="MenuBtn-CERTIFICATE" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">004</span> Документы</div>
-                <div id="MenuBtn-TECHNOLOGY" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">005</span> Партнеры</div>
-                <div id="MenuBtn-EVENTS" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">006</span> Новости</div>
-                <a href="./contact/contactrus.html" style="text-decoration: none;" id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">007</span> Контакт</a>
+             <a href="./katalog/quruq/xom.html" style="text-decoration: none;" class="MenuBtn"><div id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">004</span> Продажа Сиря</div></a>
+                <div id="MenuBtn-CERTIFICATE" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">005</span> Документы</div>
+                <div id="MenuBtn-TECHNOLOGY" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">006</span> Партнеры</div>
+                <div id="MenuBtn-EVENTS" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">007</span> Новости</div>
+                <a href="./contact/contactrus.html" style="text-decoration: none;" id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">008</span> Контакт</a>
             </div>
 
 
