--- a/contact/contacteng.html
+++ b/contact/contacteng.html
@@ -63,14 +63,17 @@
 		<address class="address">
 			<p>Peshku Yangigul 116<br>
 				Uzbekistan, Bukhara</p>
-		  <p>+998914187777</p>
+		  <p>+998997055505</p>
 			</address>
 		<h6 class="widget-title">FOLLOW US</h6>
 		<ul class="social-media">
       <li><a href="https://api.whatsapp.com/send/?phone=998997055505&text&app_absent=0">Whatsapp</a></li>
-					<li><a href="https://instagram.com/masterbrother2021?utm_medium=copy_link">Instagram</a></li>
+					<li><a href="viber://add?number=+998997055505">Viber</a></li>
 					<li><a href="https://www.linkedin.com/in/mirjahon-sharipov-160264161">Twitter</a></li>
 					<li><a href="http://www.t.me/masterbrotheruz">Telegram</a></li>
+          <li>
+            <a href="weixin://dl/chat?mirjahonshoh">WeChat</a>
+          </li>
 		</ul>
 			</div>
 		<!-- end hide-mobile -->
@@ -78,7 +81,7 @@
     <div class="languages">
       <ul>
         <li><a href="./contact.html">en</a></li>
-        <li><a href="./contactrus.html">ru</a></li>
+        <li><a href="../contact_rus/contactrus.html">ru</a></li>
         <li><a href="../contact/contact.html">uz</a></li>
       </ul>
     </div>
@@ -103,7 +106,7 @@
     <div class="languages">
       <ul>
         <li><a href="./contact.html">en</a></li>
-        <li><a href="./contactrus.html">ru</a></li>
+        <li><a href="../contact_rus/contactrus.html">ru</a></li>
         <li><a href="../contact/contact.html">uz</a></li>
       </ul>
     </div>
@@ -151,10 +154,10 @@
       <!-- end col-4 -->
       <div class="col-lg-4 col-md-6">
         <div class="contact-box"> 
-			<a href="tel: +998993445722">
+			<a href="tel: +998997055505">
 			<figure><img src="images/icon-phone.png" alt="Image"></figure>
           <h6>Telefon</h6>
-           <p>+998 91 418 77 77</p>
+           <p>+998 99 705 55 05</p>
 		</a>
         </div>
         <!-- end contact-box --> 
@@ -199,7 +202,7 @@
 			  	<img src="images/author01.jpg" alt="Image">
 			  </figure>Sales Representative
 			  
-			  <b>+998 91 418 77 77</b>
+			  <b>+998 99 705 55 05</b>
 		  </div>
 		  <!-- end sales-representive -->
 		</div>
@@ -219,7 +222,7 @@
         <h6 class="widget-title">Address</h6>
         <address><p>Peshku Yangigul 116<br>
 			Uzbekistan, Bukhara</p>
-		  <p>+998 91 418 77 77</p>
+		  <p>+998 99 705 55 05</p>
 			<a href="https://goo.gl/maps/385Ro3nBCWeoXsCs8" >FIND US ON MAP</a>
 			</address>
       </div>
@@ -228,7 +231,7 @@
         <h6 class="widget-title">SALES OFFICES</h6>
         <address><p> Bahovuddin Naqashbandi ko'chasi<br>
 Uzbekistan, Bukhara</p>
-		  <p>+998 91 418 77 77</p>
+		  <p>+998 91 245 14 14</p>
 			<a href="https://goo.gl/maps/385Ro3nBCWeoXsCs8" >FIND US ON MAP</a>
 			</address>
       </div>
@@ -247,9 +250,12 @@ Uzbekistan, Bukhara</p>
 				<span>© 2022 Master Brother Company</span>
 				<ul>
 					<li><a href="https://api.whatsapp.com/send/?phone=998997055505&text&app_absent=0">Whatsapp</a></li>
-					<li><a href="https://instagram.com/masterbrother2021?utm_medium=copy_link">Instagram</a></li>
+					<li><a href='https://t.me/Mirjahon_Sharipov'>Telegram</a></li>
+          <li>
+            <a href="weixin://dl/chat?mirjahonshoh">WeChat</a>
+          </li>
 					<li><a href="https://www.linkedin.com/in/mirjahon-sharipov-160264161">Twitter</a></li>
-					<li><a href="http://www.t.me/masterbrotheruz">Telegram</a></li>
+					<!-- <li><a href="http://www.t.me/masterbrotheruz">Telegram</a></li> -->
 					</ul>
 			</div>
 			<!-- end footer-bottom -->
