--- a/index.html
+++ b/index.html
@@ -457,9 +457,10 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
 
                 <div id="TechnologyB5" class="TechnologyB">
                     <div id="TechnologyB1-Back" class="RC10 Full"></div>
-                    <img id="TechnologyB1-Pic" class="Full" src="./App_Images/hamkor (2).png" />
-                    <div id="TechnologyB1-Title">Qingdao Tongda Textile Machinery Co., Ltd</div>
-                    <div id="TechnologyB1-SubTitle">CHINA</div>
+                    <img id="TechnologyB1-Pic" class="Full" src="./App_Images/scb.jpg" />
+                    <div id="TechnologyB1-Title">SATRAP COMMERCIAL BROKERS LLC</div>
+                    <div id="TechnologyB1-SubTitle">United Arab Emirates</div>
+
                 </div>
 
                    <!-- new new new -->
@@ -1018,7 +1019,7 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
                 <div id="ContactInfo-Addr1">MASTER BROTHER MCHJ</div>
                 <div id="ContactInfo-Addr2">Ghaem magham farahani St.</div>
                 <div id="ContactInfo-Addr3">Tehran, Iran.</div>
-                <div id="ContactInfo-Tel"><span>Tel : </span> +998914187777</div>
+                <div id="ContactInfo-Tel"><span>Tel : </span> +998997055505</div>
                 <div id="ContactInfo-Email"><span>Email : </span> master.brother@bk.ru</div>
 
 
