--- a/rus.html
+++ b/rus.html
@@ -148,7 +148,7 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
                 <div id="MenuBtn-HOME" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">001</span> Главный</div>
                 <div id="MenuBtn-ABOUT" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">002</span> О компании</div>
              <a href="./katalog/quruq/index.html" style="text-decoration: none;" class="MenuBtn"><div id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">003</span> Товары</div></a>
-             <a href="./katalog/quruq/xom.html" style="text-decoration: none;" class="MenuBtn"><div id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">004</span> Продажа Сиря</div></a>
+             <a href="./katalog/quruq/xom.html" style="text-decoration: none;" class="MenuBtn"><div id="" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">004</span>Продажа Сиря</div></a>
                 <div id="MenuBtn-CERTIFICATE" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">005</span> Документы</div>
                 <div id="MenuBtn-TECHNOLOGY" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">006</span> Партнеры</div>
                 <div id="MenuBtn-EVENTS" class="MenuBtn"><div class="MenuBtnLineX"></div><div class="MenuBtnBullet S0 RCX"></div><span class="MenuBtnNum">007</span> Новости</div>
@@ -446,9 +446,11 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
 
                 <div id="TechnologyB5" class="TechnologyB">
                     <div id="TechnologyB1-Back" class="RC10 Full"></div>
-                    <img id="TechnologyB1-Pic" class="Full" src="./App_Images/hamkor (2).png" />
-                    <div id="TechnologyB1-Title">Qingdao Tongda Textile Machinery Co., Ltd</div>
-                    <div id="TechnologyB1-SubTitle">CHINA</div>
+                    <img id="TechnologyB1-Pic" class="Full" src="./App_Images/scb.jpg" />
+                    <div id="TechnologyB1-Title">SATRAP COMMERCIAL BROKERS LLC</div>
+                    <div id="TechnologyB1-SubTitle">United Arab Emirates</div>
+
+                    
                 </div>
 
                 <!-- new new new -->
@@ -1006,7 +1008,7 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
                 <div id="ContactInfo-Addr1">MASTER BROTHER MCHJ</div>
                 <div id="ContactInfo-Addr2">Ghaem magham farahani St.</div>
                 <div id="ContactInfo-Addr3">Tehran, Iran.</div>
-                <div id="ContactInfo-Tel"><span>Tel : </span> +998914187777</div>
+                <div id="ContactInfo-Tel"><span>Tel : </span> +998997055505</div>
                 <div id="ContactInfo-Email"><span>Email : </span> master.brother@bk.ru</div>
 
 
